update website layout and content, add get_class AST search

--- a/doc/website/css/global.css
+++ b/doc/website/css/global.css
@@ -6,12 +6,13 @@ body {
 h1 {
     margin: 0;
     padding: 20px 0px 10px 0px;
+    font-size: 145%;
 }
 
 h2 {
     margin: 0;
-    padding: 20px 0px 10px 0px;
-    font-size: 140%;
+    padding: 15px 0px 7px 0px;
+    font-size: 130%;
 }
 
 h3 {
@@ -40,7 +41,7 @@ a:active {
 }
 
 p {
-    margin: 0px 0px 20px 0px;
+    margin: 5px 0px 10px 0px;
     padding: 0;
 }
 
@@ -71,8 +72,8 @@ ul.status {
 pre {
     background-color: #fffadd;
     border: 1px black dashed;
-    padding: 25px;
-    margin: 5px;
+    padding: 15px;
+    margin: 2px 5px 15px 5px;
     width: 52em;
 }
 
@@ -89,4 +90,9 @@ pre {
 .yettostart {
     color: #8888aa;
     display: inline;
+}
+
+th {
+    text-align: left;
+    padding: 2px 10px 2px 2px;
 }
